<resources>
    <string name="app_name">Tantangan 4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masuk">Halaman Masuk</string>
    <string name="belum_punya_akun"><font color='00000000'>Belum punya akun? Klik disini untuk </font><font color='#FF018786'>Daftar</font></string>
    <string name="login">Masuk</string>
    <string name="catatan_belanja">Catatan Belanja</string>
    <string name="logout">logout</string>
    <string name="add_list">add_list</string>
    <string name="welcome">Welcome</string>
</resources>